Fix z-index

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,7 +1,3 @@
-.section.hero-container {
-  background-color: unset;
-}
-
 .hero-container .hero-wrapper {
   /* max-width: unset; */
   padding: 0;
@@ -37,6 +33,7 @@
   animation-iteration-count: 1;
   animation-play-state: running;
   animation-fill-mode: backwards;
+  position: relative;
 }
 
 .hero.video p {
@@ -50,11 +47,11 @@
   animation-iteration-count: 1;
   animation-play-state: running;
   animation-fill-mode: backwards;
+  position: relative;
 }
 
 .hero picture {
   position: absolute;
-  z-index: -1;
   inset: 0;
   object-fit: cover;
   box-sizing: border-box;
@@ -75,7 +72,6 @@
   left: 0;
   top: 0;
   width: 100%;
-  z-index: -1;
   min-height: 500px;
 }
 
@@ -83,7 +79,6 @@
   content: " ";
   display: block;
   position: absolute;
-  z-index: -1;
   height: 100%;
   top: 0;
   left: 0;
